--- a/test2.html
+++ b/test2.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     
-    
+
     <h1>Hello friend</h1>
     <p>I love pudding</p>
-
+    <p>I love pudding</p>
 
 </body>
 </html>
