--- a/test2.html
+++ b/test2.html
@@ -7,5 +7,6 @@
     <h1>Hello friend</h1>
     <p>I love pudding</p>
     <p>I don't get github</p>
+    <p>but i will learning it</p>
 </body>
 </html>
